force-app/main/default/objects/CCR_QureConfiguration__c/CCR_QureConfiguration__c.object-meta.xml
<CustomObject>
    <description>Used by: CCR
Description: It&apos;s to store information that will be used in back-end to execute pre-eligibility and eligibility checks during the Qure process.</description>
    <label>Qure Configuration</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Qure Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qure Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>