force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_AutomaticWarrantyExtension__c.field-meta.xml
<CustomField>
    <fullName>CCR_AutomaticWarrantyExtension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR. 
Description: It&apos;s to store information if automatic warranty exntension is applicable for specific code.</description>
    <label>Automatic Warranty Extension</label>
    <type>Checkbox</type>
</CustomField>