force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_CalculateUnlimitedPeriodFrom__c.field-meta.xml
<CustomField>
    <fullName>CCR_CalculateUnlimitedPeriodFrom__c</fullName>
    <description>Used by: CCR
Description: Calculate the unlimited period from which field</description>
    <label>Calculate Unlimited Period From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Device</fullName>
            </value>
            <value>
                <fullName>Latest Active Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>