force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_CodeToBeEscalated__c.field-meta.xml
<CustomField>
    <fullName>CCR_CodeToBeEscalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR. 
Description: It&apos;s to store information if diagnostic result code should be escalated.</description>
    <label>Code to be Escalated</label>
    <type>Checkbox</type>
</CustomField>