force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_Color__c.field-meta.xml
<CustomField>
    <fullName>CCR_Color__c</fullName>
    <description>Used by: CCR
Description: It&apos;s to store information about the device color.</description>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AQE</fullName>
            </value>
            <value>
                <fullName>BCO</fullName>
            </value>
            <value>
                <fullName>BGD</fullName>
            </value>
            <value>
                <fullName>BLA</fullName>
            </value>
            <value>
                <fullName>BLU</fullName>
            </value>
            <value>
                <fullName>BRG</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>CHG</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>COR</fullName>
            </value>
            <value>
                <fullName>DDM</fullName>
            </value>
            <value>
                <fullName>DLV</fullName>
            </value>
            <value>
                <fullName>DPT</fullName>
            </value>
            <value>
                <fullName>EMP</fullName>
            </value>
            <value>
                <fullName>FGR</fullName>
            </value>
            <value>
                <fullName>FRY</fullName>
            </value>
            <value>
                <fullName>GOL</fullName>
            </value>
            <value>
                <fullName>GRA</fullName>
            </value>
            <value>
                <fullName>GRN</fullName>
            </value>
            <value>
                <fullName>GRY</fullName>
            </value>
            <value>
                <fullName>HOP</fullName>
            </value>
            <value>
                <fullName>HRP</fullName>
            </value>
            <value>
                <fullName>IPL</fullName>
            </value>
            <value>
                <fullName>IRO</fullName>
            </value>
            <value>
                <fullName>JBL</fullName>
            </value>
            <value>
                <fullName>LBE</fullName>
            </value>
            <value>
                <fullName>LBL</fullName>
            </value>
            <value>
                <fullName>LUT</fullName>
            </value>
            <value>
                <fullName>MAB</fullName>
            </value>
            <value>
                <fullName>MAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>