force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_ConsiderPastReplacementsAfterPeriod__c.field-meta.xml
<CustomField>
    <fullName>CCR_ConsiderPastReplacementsAfterPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR
Description: Field to enable the replacements consider after the period ends.</description>
    <label>Consider Past Replacements After Period</label>
    <type>Checkbox</type>
</CustomField>