force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_Country__c.field-meta.xml
<CustomField>
    <fullName>CCR_Country__c</fullName>
    <description>Used by: CCR
Description: It&apos;s to store information about the country.</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTI_CountryISOs</valueSetName>
    </valueSet>
</CustomField>