force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_CoveredInWarranty__c.field-meta.xml
<CustomField>
    <fullName>CCR_CoveredInWarranty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR. 
Description: It&apos;s to store information if diagnostic result code is covered by warranty.</description>
    <label>Covered in Warranty</label>
    <type>Checkbox</type>
</CustomField>