force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_DependentOn__c.field-meta.xml
<CustomField>
    <fullName>CCR_DependentOn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used By: CCR
Description: Used for self dependency for the dependent picklist.</description>
    <label>Dependent On</label>
    <referenceTo>CCR_QureConfiguration__c</referenceTo>
    <relationshipLabel>Qure Configurations</relationshipLabel>
    <relationshipName>Qure_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>