force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_DependentOnDetail__c.field-meta.xml
<CustomField>
    <fullName>CCR_DependentOnDetail__c</fullName>
    <formula>IF(CCR_DependentOn__r.CCR_PicklistValue__c &lt;&gt; null , CCR_DependentOn__r.CCR_PicklistValue__c,  TEXT(CCR_DependentOn__r.CCR_FormField__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dependent On Detail</label>
    <type>Text</type>
</CustomField>