force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_DiagnosticDescription__c.field-meta.xml
<CustomField>
    <fullName>CCR_DiagnosticDescription__c</fullName>
    <description>Used By: CCR 
Description: It&apos;s to store Qure diagnostic issue description.</description>
    <label>Diagnostic Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_DiagnosticDescription</valueSetName>
    </valueSet>
</CustomField>