force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_DiagnosticResult__c.field-meta.xml
<CustomField>
    <fullName>CCR_DiagnosticResult__c</fullName>
    <description>Used by: CCR
Description: It&apos;s to store information about diagnostic result code as also used in Device diagnostic.</description>
    <label>Diagnostic Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_DiagnosticResult</valueSetName>
    </valueSet>
</CustomField>