force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>CCR_DisplayOrder__c</fullName>
    <description>Used By: CCR
Description: This field is to give the Replacement Channel display order in the QURE</description>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>