force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_EligibleForReplacement__c.field-meta.xml
<CustomField>
    <fullName>CCR_EligibleForReplacement__c</fullName>
    <description>Used by: CCR
Description: It&apos;s to store information for how many days from Diagnostic process consumer is able to replace the device.</description>
    <label>Eligibile for Replacement (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>