force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_FormField__c.field-meta.xml
<CustomField>
    <fullName>CCR_FormField__c</fullName>
    <description>Used By:CCR
Description: This is for Field for the Courier Delivery form.</description>
    <label>Form Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>AddressReference</fullName>
                <label>Address Reference</label>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>C/O</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>District</fullName>
            </value>
            <value>
                <fullName>Door</fullName>
            </value>
            <value>
                <fullName>FirstName</fullName>
                <label>First Name</label>
            </value>
            <value>
                <fullName>IDNumber</fullName>
                <label>ID Number</label>
            </value>
            <value>
                <fullName>IDType</fullName>
                <label>ID Type</label>
            </value>
            <value>
                <fullName>LastName</fullName>
                <label>Last Name</label>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>PostalCode</fullName>
                <label>Postal Code</label>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Salutation</fullName>
            </value>
            <value>
                <fullName>StreetName</fullName>
                <label>Street Name</label>
            </value>
            <value>
                <fullName>StreetNumber</fullName>
                <label>Street Number</label>
            </value>
            <value>
                <fullName>TaxID</fullName>
                <label>Tax ID</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>