force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_L0code__c.field-meta.xml
<CustomField>
    <fullName>CCR_L0code__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information about L0 code (ex. A1, B1)</description>
    <label>L0 code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A01</fullName>
            </value>
            <value>
                <fullName>A411</fullName>
            </value>
            <value>
                <fullName>A412</fullName>
            </value>
            <value>
                <fullName>A413</fullName>
            </value>
            <value>
                <fullName>A414</fullName>
            </value>
            <value>
                <fullName>B02</fullName>
            </value>
            <value>
                <fullName>B03</fullName>
            </value>
            <value>
                <fullName>B01</fullName>
            </value>
            <value>
                <fullName>C01</fullName>
            </value>
            <value>
                <fullName>C02</fullName>
            </value>
            <value>
                <fullName>B04</fullName>
            </value>
            <value>
                <fullName>B05</fullName>
            </value>
            <value>
                <fullName>B07</fullName>
            </value>
            <value>
                <fullName>B06</fullName>
            </value>
            <value>
                <fullName>B08</fullName>
            </value>
            <value>
                <fullName>B09</fullName>
            </value>
            <value>
                <fullName>A101</fullName>
            </value>
            <value>
                <fullName>B102</fullName>
            </value>
            <value>
                <fullName>C002</fullName>
            </value>
            <value>
                <fullName>B037</fullName>
            </value>
            <value>
                <fullName>B104</fullName>
            </value>
            <value>
                <fullName>B038</fullName>
            </value>
            <value>
                <fullName>B045</fullName>
            </value>
            <value>
                <fullName>B006</fullName>
            </value>
            <value>
                <fullName>B105</fullName>
            </value>
            <value>
                <fullName>B101</fullName>
            </value>
            <value>
                <fullName>C101</fullName>
            </value>
            <value>
                <fullName>B103</fullName>
            </value>
            <value>
                <fullName>B033</fullName>
            </value>
            <value>
                <fullName>B050</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>