force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_Lenght__c.field-meta.xml
<CustomField>
    <fullName>CCR_Lenght__c</fullName>
    <description>User By: CCR
Description: Character Length for the field</description>
    <label>Lenght</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>