force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>CCR_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used By: CCR
Description: Is it required field on the form.</description>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>