force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_MarketEnabled__c.field-meta.xml
<CustomField>
    <fullName>CCR_MarketEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used By: CCR
Description: This field is to identify the replacement channel is Enable or not.</description>
    <label>Market Enabled</label>
    <type>Checkbox</type>
</CustomField>