force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_MaterialGroupDescription__c.field-meta.xml
<CustomField>
    <fullName>CCR_MaterialGroupDescription__c</fullName>
    <description>Used By: CCR 
Description: It&apos;s to store information about material group description.</description>
    <label>Material Group Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_MaterialGroupDescription</valueSetName>
    </valueSet>
</CustomField>