force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_MaximumReplacementsForCode__c.field-meta.xml
<CustomField>
    <fullName>CCR_MaximumReplacementsForCode__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information what is the maximum number for replacements for specific diagnositc code.</description>
    <label>Maximum Replacements for Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>