force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_MaxNumberOfReplacementsPerDevice__c.field-meta.xml
<CustomField>
    <fullName>CCR_MaxNumberOfReplacementsPerDevice__c</fullName>
    <description>Used by: CCR
Description: It&apos;s to store information how many times consumer is able to replace the same device.</description>
    <label>Max number of replacements per device</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>