force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_Model__c.field-meta.xml
<CustomField>
    <fullName>CCR_Model__c</fullName>
    <description>Used by: CCR
Description: It&apos;s to store information about the device model.</description>
    <label>Model</label>
    <length>10</length>
    <type>Text</type>
</CustomField>