force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_NumberofTroubleshootingTips__c.field-meta.xml
<CustomField>
    <fullName>CCR_NumberofTroubleshootingTips__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information about number of troubleshooting/tips screens per issue.</description>
    <label>Number of Troubleshooting/Tips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>