force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_Persona__c.field-meta.xml
<CustomField>
    <fullName>CCR_Persona__c</fullName>
    <description>Used By: CCR
Description: This field for the User Type enable for the replacement channel</description>
    <label>Persona (User Type)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_UserType</valueSetName>
    </valueSet>
</CustomField>