force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_PicklistValue__c.field-meta.xml
<CustomField>
    <fullName>CCR_PicklistValue__c</fullName>
    <description>Used By: CCR
Description: For picklist date</description>
    <label>Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>