force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_QureConfigurationUID__c.field-meta.xml
<CustomField>
    <fullName>CCR_QureConfigurationUID__c</fullName>
    <description>Used By: CCR 
Description:The fields will be used to leverage for the deployment of Qure config data in other environments</description>
    <externalId>true</externalId>
    <label>Qure Configuration UID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>