force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User By: CCR
Description: To make field read only.</description>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>