force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_Regex__c.field-meta.xml
<CustomField>
    <fullName>CCR_Regex__c</fullName>
    <description>Used By: CCR
Description: Regex expression for the field validation
1. Regular Expression for Courier Delivery Form.
2. Marketing Cloud Template Id for Market Email Configuration.</description>
    <inlineHelpText>1. Regular Expression for Courier Delivery Form.
2. Marketing Cloud Template Id for Market Email Configuration.</inlineHelpText>
    <label>Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>