force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_ReplacementChannel__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementChannel__c</fullName>
    <description>Used By: CCR
Description: This field for Replacement Channel</description>
    <label>Replacement Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_QureReplacementChannel</valueSetName>
    </valueSet>
</CustomField>