force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_ReplacementSponsoredBy__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementSponsoredBy__c</fullName>
    <description>Used by: CCR
Description: Value populate on Replacements Sponsored By field on Asset</description>
    <label>Replacement Sponsored By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always Warranty</fullName>
            </value>
            <value>
                <fullName>Always Goodwill</fullName>
            </value>
            <value>
                <fullName>Goodwill for C Codes Warranty for B Codes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>