force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_ReplacementType__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementType__c</fullName>
    <description>Used By: CCR
Description: Replacing Device Type</description>
    <label>Replacement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLU</fullName>
            </value>
            <value>
                <fullName>KIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>