force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_SubjectCode__c.field-meta.xml
<CustomField>
    <fullName>CCR_SubjectCode__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information about the subject code.</description>
    <label>Subject Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_SubjectCode</valueSetName>
    </valueSet>
</CustomField>