force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_TimeForBlockOnlineQure__c.field-meta.xml
<CustomField>
    <fullName>CCR_TimeForBlockOnlineQure__c</fullName>
    <description>Used By: CCR 
Description: It&apos;s to store information or how many hours the online Qure will be blocked</description>
    <label>Time For Block Online Qure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>