force-app/main/default/objects/CCR_QureConfiguration__c/fields/CCR_UnlimitedReplacementsPeriod__c.field-meta.xml
<CustomField>
    <fullName>CCR_UnlimitedReplacementsPeriod__c</fullName>
    <description>Used by: CCR
Description: It&apos;s to store information for how long the unlimited period is active</description>
    <label>Unlimited Replacements Period (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>