force-app/main/default/objects/CCR_QureConfiguration__c/recordTypes/CCR_CourierDeliveryConfiguration.recordType-meta.xml
<RecordType>
    <fullName>CCR_CourierDeliveryConfiguration</fullName>
    <active>true</active>
    <description>This Record is for the Courier Delivery Form data records based on the Market.</description>
    <label>Courier Delivery Configuration</label>
</RecordType>