force-app/main/default/objects/CCR_QureConfiguration__c/recordTypes/CCR_LimitedEdition.recordType-meta.xml
<RecordType>
    <fullName>CCR_LimitedEdition</fullName>
    <active>true</active>
    <description>Used by: CCR  Description:It&apos;s to store information about limited edition devices for country</description>
    <label>Limited Edition</label>
</RecordType>