force-app/main/default/objects/CCR_QureConfiguration__c/recordTypes/CCR_MarketConfiguration.recordType-meta.xml
<RecordType>
    <fullName>CCR_MarketConfiguration</fullName>
    <active>true</active>
    <description>Used by: CCR  Description:It&apos;s to store information about market configuration per diagnostic result.</description>
    <label>Market Configuration</label>
</RecordType>