force-app/main/default/objects/CCR_QureConfiguration__c/recordTypes/CCR_MarketEmailConfiguration.recordType-meta.xml
<RecordType>
    <fullName>CCR_MarketEmailConfiguration</fullName>
    <active>true</active>
    <description>This Record Type is for Enabling the Transactional Email Configuration for Market</description>
    <label>Market Email Configuration</label>
</RecordType>