force-app/main/default/objects/CCR_QureConfiguration__c/recordTypes/CCR_MarketReplacement.recordType-meta.xml
<RecordType>
    <fullName>CCR_MarketReplacement</fullName>
    <active>true</active>
    <description>Used by: CCR  Description:It&apos;s to store information about limits for replacement specific for market.</description>
    <label>Market Replacement</label>
</RecordType>