force-app/main/default/objects/CCR_QureConfiguration__c/recordTypes/CCR_PicklistDependency.recordType-meta.xml
<RecordType>
    <fullName>CCR_PicklistDependency</fullName>
    <active>true</active>
    <description>This record type is for picklist dependency</description>
    <label>Picklist Dependency</label>
</RecordType>