force-app/main/default/objects/CCR_QureConfiguration__c/recordTypes/CCR_QureReplacementChannel.recordType-meta.xml
<RecordType>
    <fullName>CCR_QureReplacementChannel</fullName>
    <active>true</active>
    <description>This Record Type is for the Replacement Channels for the device replacement</description>
    <label>Qure Replacement Channel</label>
</RecordType>