force-app/main/default/objects/CCR_QureConfiguration__c/recordTypes/CCR_SubscriptionReplacement.recordType-meta.xml
<RecordType>
    <fullName>CCR_SubscriptionReplacement</fullName>
    <active>true</active>
    <description>This Record Type is for the Subscription Replacement</description>
    <label>Subscription Replacement</label>
</RecordType>