force-app/main/default/objects/CCR_QureConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCR_Model__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CCR_MaximumReplacementsForCode__c</columns>
    <columns>CCR_MaxNumberOfReplacementsPerDevice__c</columns>
    <columns>CCR_CoveredInWarranty__c</columns>
    <columns>CCR_DiagnosticDescription__c</columns>
    <columns>CCR_DiagnosticResult__c</columns>
    <columns>CCR_EligibleForReplacement__c</columns>
    <columns>CCR_CodeToBeEscalated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>