force-app/main/default/objects/CCR_QureConfiguration__c/listViews/CCR_AllReplacementChannel.listView-meta.xml
<ListView>
    <fullName>CCR_AllReplacementChannel</fullName>
    <columns>NAME</columns>
    <columns>CCR_Country__c</columns>
    <columns>CCR_Color__c</columns>
    <columns>CCR_Model__c</columns>
    <columns>CCR_ReplacementChannel__c</columns>
    <columns>CCR_DisplayOrder__c</columns>
    <columns>CCR_Persona__c</columns>
    <columns>CCR_QureConfigurationUID__c</columns>
    <columns>CCR_MarketEnabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CCR_QureConfiguration__c.CCR_QureReplacementChannel</value>
    </filters>
    <label>All Replacement Channel</label>
</ListView>