force-app/main/default/objects/CCR_QureConfiguration__c/listViews/CCR_AllSlovenia.listView-meta.xml
<ListView>
    <fullName>CCR_AllSlovenia</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CCR_Model__c</columns>
    <columns>CCR_Color__c</columns>
    <columns>CCR_Country__c</columns>
    <columns>CCR_DiagnosticDescription__c</columns>
    <columns>CCR_DiagnosticResult__c</columns>
    <columns>CCR_EligibleForReplacement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CCR_Country__c</field>
        <operation>equals</operation>
        <value>SI</value>
    </filters>
    <label>All Slovenia</label>
    <language>en_US</language>
</ListView>