force-app/main/default/objects/CCR_QureConfiguration__c/listViews/CCR_DependentPicklist.listView-meta.xml
<ListView>
    <fullName>CCR_DependentPicklist</fullName>
    <columns>NAME</columns>
    <columns>CCR_Country__c</columns>
    <columns>CCR_DependentOn__c</columns>
    <columns>CCR_DependentOnDetail__c</columns>
    <columns>CCR_DisplayOrder__c</columns>
    <columns>CCR_PicklistValue__c</columns>
    <columns>CCR_QureConfigurationUID__c</columns>
    <columns>CCR_MarketEnabled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CCR_QureConfiguration__c.CCR_PicklistDependency</value>
    </filters>
    <label>Dependent Picklist</label>
    <language>en_US</language>
</ListView>