force-app/main/default/objects/CCR_QureConfiguration__c/listViews/CCR_LimitedEdition.listView-meta.xml
<ListView>
    <fullName>CCR_LimitedEdition</fullName>
    <columns>NAME</columns>
    <columns>CCR_Color__c</columns>
    <columns>CCR_Country__c</columns>
    <columns>CCR_Model__c</columns>
    <columns>CCR_DiagnosticDescription__c</columns>
    <columns>CCR_DiagnosticResult__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CCR_QureConfiguration__c.CCR_LimitedEdition</value>
    </filters>
    <label>Limited Edition</label>
    <language>en_US</language>
</ListView>