force-app/main/default/objects/CCR_QureConfiguration__c/listViews/CCR_Market_Email_Configuration.listView-meta.xml
<ListView>
    <fullName>CCR_Market_Email_Configuration</fullName>
    <columns>NAME</columns>
    <columns>CCR_Country__c</columns>
    <columns>CCR_ReplacementChannel__c</columns>
    <columns>CCR_Regex__c</columns>
    <columns>CCR_QureConfigurationUID__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CCR_QureConfiguration__c.CCR_MarketEmailConfiguration</value>
    </filters>
    <label>Market Email Configuration</label>
    <language>en_US</language>
</ListView>