force-app/main/default/objects/CCR_QureConfiguration__c/listViews/CCR_MarketReplacement.listView-meta.xml
<ListView>
    <fullName>CCR_MarketReplacement</fullName>
    <columns>NAME</columns>
    <columns>CCR_Country__c</columns>
    <columns>CCR_EligibleForReplacement__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CCR_QureConfiguration__c.CCR_MarketReplacement,CCR_QureConfiguration__c.CCR_SubscriptionReplacement</value>
    </filters>
    <label>Market Replacement</label>
    <language>en_US</language>
</ListView>