force-app/main/default/objects/CCR_QureConfiguration__c/listViews/CZ_qure_config_uid.listView-meta.xml
<ListView>
    <fullName>CZ_qure_config_uid</fullName>
    <columns>NAME</columns>
    <columns>CCR_QureConfigurationUID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CCR_CodeToBeEscalated__c</columns>
    <columns>CCR_DiagnosticDescription__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CCR_QureConfigurationUID__c</field>
        <operation>contains</operation>
        <value>cz_mc</value>
    </filters>
    <label>CZ qure config uid</label>
    <language>en_US</language>
</ListView>