force-app/main/default/objects/CCR_QureConfiguration__c/listViews/CZ_qure_config_uid_rc.listView-meta.xml
<ListView>
    <fullName>CZ_qure_config_uid_rc</fullName>
    <columns>NAME</columns>
    <columns>CCR_QureConfigurationUID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CCR_ReplacementChannel__c</columns>
    <columns>CCR_Persona__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CCR_QureConfigurationUID__c</field>
        <operation>contains</operation>
        <value>cz_rc</value>
    </filters>
    <label>CZ qure config uid rc</label>
    <language>en_US</language>
</ListView>